<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.dutta-abhijit.hashnode</groupId>
  <artifactId>SparkWrapperScalaFramework</artifactId>
  <version>1.0.1</version>
  <packaging>jar</packaging>

  <name>${project.artifactId}</name>
  <description>Spark Wrapper For Scala Logic Framework</description>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <spark.version>3.3.1</spark.version>
    <scala.version>2.12.15</scala.version>
    <scala.short.version>2.12</scala.short.version>
    <scalast.version>3.2.10</scalast.version>
    <hadoop.version>3.3.1</hadoop.version>
    <scoverage.plugin.version>1.4.11</scoverage.plugin.version>
    <encoding>UTF-8</encoding>
    <skipTests>True</skipTests>
  </properties>


  <repositories>
    <repository>
      <id>central</id>
      <name>Maven Central Repository</name>
      <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
    <repository>
      <id>aws-glue-etl-artifacts</id>
      <url>https://aws-glue-etl-artifacts.s3.amazonaws.com/release/</url>
    </repository>
  </repositories>

<!--  <dependencyManagement>-->
<!--    <dependencies>-->
<!--      <dependency>-->
<!--        <groupId>GROUP ID OF the GITHUB/BITBUCKET REPO OF THE PARENT PROJECT. MAKE SURE ITS THERE IN REPOSITORIES TOO</groupId>-->
<!--        <artifactId>ARTIFACT ID of the same</artifactId>-->
<!--        <version>${above group id version}}</version>-->
<!--        <type>pom</type>-->
<!--        <scope>import</scope>-->
<!--      </dependency>-->
<!--    </dependencies>-->
<!--  </dependencyManagement>-->

  <dependencies>

    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_${scala.short.version}</artifactId>
      <version>${spark.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_${scala.short.version}</artifactId>
      <version>${spark.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.scalatest</groupId>
      <artifactId>scalatest_${scala.short.version}</artifactId>
      <version>${scalast.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-client</artifactId>
      <scope>provided</scope>
      <version>${hadoop.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-common</artifactId>
      <scope>provided</scope>
      <version>${hadoop.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-aws</artifactId>
      <scope>provided</scope>
      <version>${hadoop.version}</version>
    </dependency>

  </dependencies>

  <build>
    <sourceDirectory>src/main/scala</sourceDirectory>
    <testSourceDirectory>src/test/scala</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
<!--      Surefire plugin is required for java changes. If only scalatest it's not required. -->
<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-surefire-plugin</artifactId>-->
<!--        <version>2.7</version>-->
<!--        <configuration>-->
<!--          <skipTests>true</skipTests>-->
<!--&lt;!&ndash;          <useFile>false</useFile>&ndash;&gt;-->
<!--&lt;!&ndash;          <disableXmlReport>true</disableXmlReport>&ndash;&gt;-->
<!--          &lt;!&ndash; If you have classpath issue like NoDefClassError,... &ndash;&gt;-->
<!--          &lt;!&ndash; useManifestOnlyJar>false</useManifestOnlyJar &ndash;&gt;-->
<!--&lt;!&ndash;          <includes>&ndash;&gt;-->
<!--&lt;!&ndash;            <include>**/*Test.*</include>&ndash;&gt;-->
<!--&lt;!&ndash;            <include>**/*Suite.*</include>&ndash;&gt;-->
<!--&lt;!&ndash;          </includes>&ndash;&gt;-->
<!--        </configuration>-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.scalatest</groupId>
        <artifactId>scalatest-maven-plugin</artifactId>
        <version>2.0.2</version>
        <configuration>
          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
          <junitxml>.</junitxml>
          <filereports>TestSuite.txt</filereports>
          <argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
        </configuration>
        <executions>
          <execution>
            <id>test</id>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.scoverage</groupId>
        <artifactId>scoverage-maven-plugin</artifactId>
        <version>${scoverage.plugin.version}</version>
        <configuration>
          <scalaVersion>${scala.version}</scalaVersion>
          <aggregate>true</aggregate>
          <minimumCoverage>70</minimumCoverage>
          <failOnMinimumCoverage>true</failOnMinimumCoverage>
          <additionalForkedProjectProperties>skipTests=true</additionalForkedProjectProperties>
        </configuration>
        <executions>
          <execution>
            <id>scoverage-postcompile</id>
            <goals>
              <goal>post-compile</goal>
            </goals>
            <configuration>
              <skip>true</skip>
            </configuration>
          </execution>
          <execution>
            <id>scoverage-report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.scalastyle</groupId>
        <artifactId>scalastyle-maven-plugin</artifactId>
        <version>1.0.0</version>
        <configuration>
          <verbose>false</verbose>
          <failOnViolation>false</failOnViolation>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <failOnWarning>false</failOnWarning>
          <sourceDirectory>${project.basedir}/src/main/scala</sourceDirectory>
          <testSourceDirectory>${project.basedir}/src/test/scala</testSourceDirectory>
          <configLocation>${project.basedir}/scalastyle-config.xml</configLocation>
          <outputFile>${project.basedir}/target/scalastyle-output.xml</outputFile>
          <outputEncoding>UTF-8</outputEncoding>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <version>4.5.6</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.scoverage</groupId>
        <artifactId>scoverage-maven-plugin</artifactId>
        <version>${scoverage.plugin.version}</version>
        <configuration>
          <scalaVersion>${scala.version}</scalaVersion>
          <aggregate>true</aggregate>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
</project>